--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header {
 header h1 {
   font-size: 3rem;
   margin-bottom: 10px;
-  color: #e67e22;
+  color: #306fb9;
 }
 
 header p {
@@ -62,7 +62,7 @@ section {
 }
 
 section h2 {
-  color: #e67e22;
+  color: #306fb9;
   margin-bottom: 10px;
 }
 
@@ -79,7 +79,7 @@ ul {
 
 /* Kontakt */
 .kontakt a {
-  color: #e67e22;
+  color: #306fb9;
   text-decoration: none;
 }
 
