--- a/style.css
+++ b/style.css
@@ -38,11 +38,11 @@ nav ul li a {
 
 /* Header */
 header {
-  background-color: #f8f8f8;
-  padding: 120px 20px 60px;
-  text-align: center;
-  margin-top: 50px;
-}
+      text-align: center;
+      padding: 60px 20px;
+      background-color: #306fb9;
+      color: white;
+    }
 
 header h1 {
   font-size: 3rem;
