--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: white;
+  background-color: #cfd6cf;
   color: #333;
   line-height: 1.5;
 }
